--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--  HEADER -->
     <header>
         <div class="logo">
-            Tipscode
+            <img src="/public/tipscode-logo.webp" alt="logo da tipscode">
         </div>
 
         <!-- Navbar-->
@@ -45,6 +45,14 @@
                 </li>
             </ul>
         </nav>
+
+        <a href="https://www.whatsapp.com/" target="_blank" class="wpp-btn">
+            <img src="/public/wpp-icon.png" alt="WhatsApp Icon">
+
+            <span class="call">
+                Chamar
+            </span>
+        </a>
     </header>
 
     <!--HERO-->
@@ -73,7 +81,11 @@
         </div>
 
         <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+            <div class="video">
+                <video autoplay muted plays-inline loop src="/public/video-test.mp4" class="clip" type="mp4"></video>
+            </div>
+        </div>
     </section>
 
     <!--Technologies Marquee-->
@@ -123,7 +135,7 @@
         <div class="col"></div>
 
         <div class="col">
-            <img src="public/mais-sobre-o-turbo.png" alt="" class="turbo">
+            <img src="public/mais-sobre-o-turbo.png" alt="o motor do full stack turbo">
         </div>
     </section>
 
@@ -131,7 +143,7 @@
     <section class="step-by-step" id="metodo">
 
         <div class="col">
-            <img src="public/img-step-by-step.png" alt="" class="turbo">
+            <img src="public/img-step-by-step.png" alt="Sobre o método step-by-step">
         </div>
 
         <div class="col"></div>
@@ -295,26 +307,28 @@
     <section class="grade" id="grade">
         <div class="headline">
             <h2>
-                <span>VEJA O QUE SÓ UM</span>
+                <span>A GRADE MAIS CURRICULAR</span>
                 <br>
-                <span>ALUNO TEM ACESSO</span>
+                <span>COMPLETA DO MERCADO</span>
             </h2>
         </div>
 
         <div class="cordeon" id="accordion">
             <div class="line">
-                <div class="cordeon-header">
+                <div class="cordeon-header active">
                     <div class="number">1</div>
                     <div class="section-name">Introdução</div>
                 </div>
 
-                <div class="cordeon-body">
+                <div class="cordeon-body active">
                     <div class="text-block">
-                        Lorem Ipson
+                        Um belo texto explicativo com 
+                        algumas poucas palavras 
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/vscode.png" alt="html tipscode">
+                        <img src="/public/Chrome.png" alt="css tipscode">
                     </div>
                 </div>
             </div>
@@ -331,7 +345,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/HTML.png" alt="html tipscode">
+                        <img src="/public/CSS.png" alt="css tipscode">
+                        <img src="/public/BOOTSTRAP.png" alt="tipscode">
                     </div>
                 </div>
             </div>
@@ -348,7 +364,8 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/JAVASCRIPT.png" alt="javascript tipscode">
+                        <img src="/public/REACT.JS.png" alt="css tipscode">
                     </div>
                 </div>
             </div>
@@ -365,7 +382,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/NODE.JS.png" alt="node tipscode">
+                        <img src="/public/EJS.png" alt="ejs tipscode">
+                        <img src="/public/EXPRESS.JS.png" alt="express js tipscode">
                     </div>
                 </div>
             </div>
@@ -382,7 +401,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/SQL.png" alt="sql tipscode">
+                        <img src="/public/MONGODB.png" alt="mongodb tipscode">
+                        <img src="/public/MONGOOSE.png" alt="mongoose tipscode">
                     </div>
                 </div>
             </div>
@@ -399,7 +420,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="/public/GIT.png" alt="git tipscode">
+                        <img src="/public/GITHUB.png" alt="github tipscode">
+                        <img src="/public/TERMINAL LINUX.png" alt="linux tipscode">
                     </div>
                 </div>
             </div>
@@ -416,7 +439,10 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="https://placehold.co/600x400" alt="">
+                        <img src="https://avatar.iran.liara.run/public/47" alt="engenheiro google tipscode">
+                        <img src="/public/google-logo.png" alt="google">
+                        <img src="https://avatar.iran.liara.run/public/1" alt="engenheiro facebook tipscode">
+                        <img src="/public/fb-logo.png" alt=" facebooktipscode">
                     </div>
                 </div>
             </div>
@@ -515,6 +541,9 @@
         </div>
 
         <div class="mentor-img">
+            <div class="mentor-name-mobile">
+                ALISSON <br> SUASSUNA
+            </div>
             <img src="public/mentor.png" alt="">
         </div>
         <div class="mentor-content">
@@ -525,7 +554,7 @@
                 </div>
 
                 <div class="about">
-                    <h4>1.FORMAÇÃO ACADÊMICA</h4>
+                    <h4>1. FORMAÇÃO ACADÊMICA</h4>
                     <p>Com mais de 10 anos de experiência como desenvolvedor full stack, Alisson Suassuna é um líder reconhecido na área de tecnologia. Formado em Sistemas de Informação pela [Faculdade], Alisson combina conhecimento acadêmico com uma vasta experiência prática no mercado.</p>
                 </div>
             </div>
@@ -562,12 +591,12 @@
     <!--CTA-->
     <section class="cta" id="cta">
 
-        <div class="col">
-            <div class="full">
+        <div class="col col-ft">
+            <div class="full item-1">
                 FULL
             </div>
 
-            <div class="chamada">
+            <div class="chamada item-2">
                 <div class="headline cta-headline">
                     <h2>
                         <span>INVISTA NO</span>
@@ -577,12 +606,12 @@
                 </div>
             </div>
 
-            <div class="turbo">
+            <div class="turbo item-3">
                 TURBO
             </div>
         </div>
 
-        <div class="col">
+        <div class="col col-s">
             <div class="stack">
                 STACK
             </div>
@@ -591,6 +620,11 @@
         <!--Main Column-->
         <div class="col main-col">
             <div class="headline">
+
+                <div class="title">
+                    <span>FST</span>
+                    <span>2.0</span>
+                </div>
 
                 <div class="price">
                     <p>De <span>R$497,00</span></p>
