--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/vscode.png" alt="html tipscode">
-                        <img src="/public/Chrome.png" alt="css tipscode">
+                        <img src="./public/vscode.png" alt="html tipscode">
+                        <img src="./public/Chrome.png" alt="css tipscode">
                     </div>
                 </div>
             </div>
@@ -345,9 +345,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/HTML.png" alt="html tipscode">
-                        <img src="/public/CSS.png" alt="css tipscode">
-                        <img src="/public/BOOTSTRAP.png" alt="tipscode">
+                        <img src="./public/HTML.png" alt="html tipscode">
+                        <img src="./public/CSS.png" alt="css tipscode">
+                        <img src="./public/BOOTSTRAP.png" alt="tipscode">
                     </div>
                 </div>
             </div>
@@ -364,8 +364,8 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/JAVASCRIPT.png" alt="javascript tipscode">
-                        <img src="/public/REACT.JS.png" alt="css tipscode">
+                        <img src="./public/JAVASCRIPT.png" alt="javascript tipscode">
+                        <img src="./public/REACT.JS.png" alt="css tipscode">
                     </div>
                 </div>
             </div>
@@ -382,9 +382,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/NODE.JS.png" alt="node tipscode">
-                        <img src="/public/EJS.png" alt="ejs tipscode">
-                        <img src="/public/EXPRESS.JS.png" alt="express js tipscode">
+                        <img src="./public/NODE.JS.png" alt="node tipscode">
+                        <img src="./public/EJS.png" alt="ejs tipscode">
+                        <img src="./public/EXPRESS.JS.png" alt="express js tipscode">
                     </div>
                 </div>
             </div>
@@ -401,9 +401,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/SQL.png" alt="sql tipscode">
-                        <img src="/public/MONGODB.png" alt="mongodb tipscode">
-                        <img src="/public/MONGOOSE.png" alt="mongoose tipscode">
+                        <img src="./public/SQL.png" alt="sql tipscode">
+                        <img src="./public/MONGODB.png" alt="mongodb tipscode">
+                        <img src="./public/MONGOOSE.png" alt="mongoose tipscode">
                     </div>
                 </div>
             </div>
@@ -420,9 +420,9 @@
                     </div>
 
                     <div class="images-block">
-                        <img src="/public/GIT.png" alt="git tipscode">
-                        <img src="/public/GITHUB.png" alt="github tipscode">
-                        <img src="/public/TERMINAL LINUX.png" alt="linux tipscode">
+                        <img src="./public/GIT.png" alt="git tipscode">
+                        <img src="./public/GITHUB.png" alt="github tipscode">
+                        <img src="./public/TERMINAL LINUX.png" alt="linux tipscode">
                     </div>
                 </div>
             </div>
@@ -440,9 +440,9 @@
 
                     <div class="images-block">
                         <img src="https://avatar.iran.liara.run/public/47" alt="engenheiro google tipscode">
-                        <img src="/public/google-logo.png" alt="google">
+                        <img src="./public/google-logo.png" alt="google">
                         <img src="https://avatar.iran.liara.run/public/1" alt="engenheiro facebook tipscode">
-                        <img src="/public/fb-logo.png" alt=" facebooktipscode">
+                        <img src="./public/fb-logo.png" alt=" facebooktipscode">
                     </div>
                 </div>
             </div>
