header logo and wpp icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--  HEADER -->
     <header>
         <div class="logo">
-            <img src="/public/tipscode-logo.webp" alt="logo da tipscode">
+            <img src="./public/tipscode-logo.webp" alt="logo da tipscode">
         </div>
 
         <!-- Navbar-->
@@ -47,7 +47,7 @@
         </nav>
 
         <a href="https://www.whatsapp.com/" target="_blank" class="wpp-btn">
-            <img src="/public/wpp-icon.png" alt="WhatsApp Icon">
+            <img src="./public/wpp-icon.png" alt="WhatsApp Icon">
 
             <span class="call">
                 Chamar
