hero video update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col"></div>
         <div class="col">
             <div class="video">
-                <video autoplay muted plays-inline loop src="/public/video-test.mp4" class="clip" type="mp4"></video>
+                <video autoplay muted plays-inline loop src="./public/video-test.mp4" class="clip" type="mp4"></video>
             </div>
         </div>
     </section>
